--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "precommit": "lint-staged",
     "prepare-jar": "node ./scripts/prepare-mvn-package.js",
     "generate-canary-manifest": "node ./scripts/convert-to-canary-manifest.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./build_scripts/webpack.config.js",
     "starts": "cross-env NODE_ENV=development webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
     "start-prod": "cross-env NODE_ENV=production webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
     "starts-prod": "cross-env NODE_ENV=production webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
@@ -162,11 +162,11 @@
     "typescript-plugin-styled-components": "^1.5.0",
     "url-loader": "^1.1.2",
     "wait-on": "^3.1.0",
-    "webpack": "^4.29.6",
+    "webpack": "^5.0.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.10.3",
-    "worker-loader": "^2.0.0",
+    "worker-loader": "^3.0.8",
     "xml2js": "^0.4.19"
   },
   "dependencies": {
