--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "precommit": "lint-staged",
     "prepare-jar": "node ./scripts/prepare-mvn-package.js",
     "generate-canary-manifest": "node ./scripts/convert-to-canary-manifest.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./build_scripts/webpack.config.js",
-    "starts": "cross-env NODE_ENV=development webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
-    "start-prod": "cross-env NODE_ENV=production webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
-    "starts-prod": "cross-env NODE_ENV=production webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack-dev-server --config ./build_scripts/webpack.config.js",
+    "starts": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
+    "start-prod": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
+    "starts-prod": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
     "test": "tsc --noEmit && yarn lint-quiet && yarn jest",
     "test-e2e": "npx concurrently --kill-others -n 'neo4j,cypress,browser' 'docker run --env NEO4J_AUTH=neo4j/newpassword -p7474:7474 -p7687:7687 neo4j:4.2.2' 'yarn wait-on-neo4j && yarn wait-on-dev && yarn e2e-local --env server=4.2' 'yarn && yarn start'",
     "update-licenses": "sh ./scripts/generate_licenses.sh",
@@ -127,7 +127,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "express": "^4.15.4",
-    "file-loader": "^2.0.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-notifier-webpack-plugin": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
     "html-loader": "^0.5.5",
@@ -138,7 +138,7 @@
     "js2xmlparser": "^3.0.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^4.1.3",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^2.7.6",
     "mockdate": "^2.0.5",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "ncp": "^2.0.0",
@@ -160,12 +160,12 @@
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.5",
     "typescript-plugin-styled-components": "^1.5.0",
-    "url-loader": "^1.1.2",
+    "url-loader": "^4.1.1",
     "wait-on": "^3.1.0",
     "webpack": "^5.0.0",
     "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "worker-loader": "^3.0.8",
     "xml2js": "^0.4.19"
   },
